--- a/FrontBundle/Resources/views/layout.html.twig
+++ b/FrontBundle/Resources/views/layout.html.twig
@@ -10,6 +10,7 @@
 
 {% block javascripts_body %}
 	<script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
 {% endblock javascripts_body %}
 
 {% block body %}
