Final cap. 15, assetic

--- a/FrontBundle/Resources/views/_components/status.html.twig
+++ b/FrontBundle/Resources/views/_components/status.html.twig
@@ -1,18 +1,28 @@
 <div class="row" class="status-container">
 	<div class="col-md-12">
-		<p>Par <a href="{{ path('tech_corp_front_user_timeline', { userId : status.user.id}) }}">{{ status.user.username }}</a></p>
+		<p class="author">Par <a href="{{ path('tech_corp_front_user_timeline', { userId : status.user.id}) }}">{{ status.user.username }}</a></p>
 		<p>{{ status.content }}</p>
-		<p>le {{ status.createdAt | date('Y-m-d H:i:s') }} </p>
+		<p class="date">le {{ status.createdAt | date('Y-m-d H:i:s') }} </p>
 	</div>
 </div>
-<div>
+<div class="comment-container">
 	{% for comment in status.comments %}
 	<div class="row">
 		<div class="col-md-12">
-			<p>Commentaire de <a href="{{ path('tech_corp_front_user_timeline', {userId : comment.user.id }) }}">{{ comment.user.username }}</a></p>
+			<p class="author">Commentaire de <a href="{{ path('tech_corp_front_user_timeline', {userId : comment.user.id }) }}">{{ comment.user.username }}</a></p>
 			<p>{{ comment.content }}</p>
-			<p>le {{ comment.createdAt|date('Y-m-d H:i:s') }}</p>
+			<p class="date">le {{ comment.createdAt|date('Y-m-d H:i:s') }}</p>
 		</div>
 	</div>
 	{% endfor %}
+
+	{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+	<div class="row">
+		<div class="col-md-12">
+			<p class="comment-title">Ajouter un commentaire: </p>
+			<textarea width="100%"></textarea>
+			<input type="submit" />
+		</div>
+	</div>
+	{% endif %}
 </div>
