--- a/FrontBundle/Resources/views/Timeline/user_timeline.html.twig
+++ b/FrontBundle/Resources/views/Timeline/user_timeline.html.twig
@@ -1,7 +1,28 @@
 {% extends 'TechCorpFrontBundle::layout.html.twig' %}
+{% block stylesheets %}
+	{{ parent() }}
+	{% stylesheets 'bundles/techcorpfront/css/*' filter="uglifycss, cssrewrite" output="css/user-timeline.css" %}
+		<link rel="stylesheet" href="{{asset_url}}" />
+	{% endstylesheets %}
+{% endblock stylesheets %}
+
+{% block javascripts_body %}
+	{{ parent() }}
+	<script src="{{ asset('bundles/techcorpfront/js/manage-friends.js') }}" type="text/javascript"></script>
+{% endblock %}
+
+
 {% block content %}
 <div class="container">
 	<h1>Timeline de {{ user.username }}</h1>
+	{% if is_granted('IS_AUTHENTICATED_REMEMBERED') and app.user != user %}
+		{% if not app.user.hasFriend(user) %}
+			<button class="btn btn-primary add-friend" data-user-id="{{ user.id }}">Ajouter à la liste d'amis</button>
+		{% else %}
+			<button class="btn btn-primary remove-friend" data-user-id="{{ user.id }}">Supprimer de la liste d'amis</button>
+		{% endif %}
+	{% endif %}
+
 	{% if is_granted('IS_AUTHENTICATED_REMEMBERED') and app.user == user %}
 		{{ form_start(form) }}
 			{{ form_errors(form) }}
@@ -18,6 +39,9 @@
 	<div class="container">
 		{% for status in statuses %}
 			{% include 'TechCorpFrontBundle:_components:status.html.twig' with {'status':status} %}
+			{% if not loop.last %}
+				<hr	class="status-separator" />
+			{% endif %}
 		{% endfor %}
 	</div>
 	{% else %}
