--- a/FrontBundle/Resources/views/layout.html.twig
+++ b/FrontBundle/Resources/views/layout.html.twig
@@ -1,16 +1,20 @@
 {% extends '::base.html.twig' %}
 
 {% block stylesheets %}
-	<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="http://getbootstrap.com/examples/jumbotron/jumbotron.css" rel="stylesheet">
+	{{ parent() }}
+	{% stylesheets '@bootstrap_css' output='css/bootstrap.css' %}
+		<link rel="stylesheet" href="{{ asset_url }}" />
+	{% endstylesheets %}
 {% endblock stylesheets %}
 
 {% block javascripts_head %}
 {% endblock javascripts_head %}
 
 {% block javascripts_body %}
-	<script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+	{{ parent() }}
+	{% javascripts '@bootstrap_js' output='js/bootstrap.js' %}
+		<script src="{{ asset_url }}"></script>
+	{% endjavascripts %}
 {% endblock javascripts_body %}
 
 {% block body %}
