--- a/FrontBundle/Resources/views/Static/about.html.twig
+++ b/FrontBundle/Resources/views/Static/about.html.twig
@@ -3,13 +3,8 @@
 {% block content %}
 	<div class="jumbotron">
 		<div class="container">
-			<h1>A propos</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h1>{{ 'about_page.title'|trans }}</h1>
+			<p>{{ 'about_page.content'|trans }}</p>
 		</div>
 	</div>
 {% endblock content %}
