--- a/FrontBundle/Resources/views/_components/navigation.html.twig
+++ b/FrontBundle/Resources/views/_components/navigation.html.twig
@@ -3,19 +3,19 @@
 		<div class="navbar-header">
 			<a class="navbar-brand" href="{{ url('tech_corp_front_homepage') }}">Project name</a>
 			<ul class="nav navbar-nav">
-				<li><a href="{{ url('tech_corp_front_homepage') }}">Accueil</a></li>
-				<li><a href="{{ url('tech_corp_front_about') }}">A propos</a></li>
+				<li><a href="{{ url('tech_corp_front_homepage') }}">{{ 'navigation.link.homepage'|trans }}</a></li>
+				<li><a href="{{ url('tech_corp_front_about') }}">{{ 'navigation.link.about'|trans }}</a></li>
 
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Mon compte<span class="caret"></span></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">{{ 'navigation.link.account'|trans }}<span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						{% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-							<li><a href="{{ path('fos_user_registration_register') }}">S'inscrire</a></li>
-							<li><a href="{{ path('fos_user_security_login') }}">Se connecter</a></li>
-							<li><a href="{{ path('fos_user_resetting_request') }}">Mot de passe oublié?</a></li>
+							<li><a href="{{ path('fos_user_registration_register') }}">{{ 'navigation.link.register'|trans }}</a></li>
+							<li><a href="{{ path('fos_user_security_login') }}">{{ 'navigation.link.login'|trans }}</a></li>
+							<li><a href="{{ path('fos_user_resetting_request') }}">{{ 'navigation.link.forgotpassword'|trans }}</a></li>
 						{% else %}
-							<li><a href="{{ path('tech_corp_front_user_timeline', { userId: app.user.id }) }}">Timeline</a></li>
-							<li><a href="{{ path('fos_user_security_logout') }}">Se deconnecter</a></li>
+							<li><a href="{{ path('tech_corp_front_user_timeline', { userId: app.user.id }) }}">{{ 'navigation.link.timeline'|trans }}</a></li>
+							<li><a href="{{ path('fos_user_security_logout') }}">{{ 'navigation.link.logout'|trans }}</a></li>
 						{% endif %}
 					</ul>
 				</li>
